--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script>
     window.$docsify = {
       name: '',
-      repo: '',
+      repo: 'https://github.com/edoup',
       loadSidebar: true,
       search: {
         maxAge: 10000,               // 过期时间，单位毫秒，默认一天
